--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title></title>
+  <link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.3.0/bootstrap.min.css">
+  <link rel="stylesheet" href="css/s.css">
 </head>
 <body>
-  
-  <button>go</button>
+  <h1>Vimeo Roulette</h1>
+  <p>Find new videos, waste time at work</p>
+  <button class="btn">go</button>
   <div id="div"></div>
-  
+
   <iframe id="frame" width="400" height="300" frameborder="0" webkitAllowFullScreen allowFullScreen></iframe>
-  
+
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.3/jquery.min.js"></script>
   <script src="js/app.js"></script>
 </body>
