--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
   <link rel="stylesheet" href="css/s.css">
 </head>
 <body>
-  <h1>Vimeo Roulette</h1>
-  <p>Find new videos, waste time at work</p>
-  <button class="btn">go</button>
-  <div id="div"></div>
+  <div id="roulette">
+    <h1>Vimeo Roulette</h1>
+    <p>Find new videos, waste time at work</p>
 
-  <iframe id="frame" width="400" height="300" frameborder="0" webkitAllowFullScreen allowFullScreen></iframe>
+    <div id="div"></div>
+    <div id="vid-box">
+      <button class="btn spin-btn large">Spin</button>
+      <!-- <iframe id="frame" width="400" height="300" frameborder="0" webkitAllowFullScreen allowFullScreen></iframe> -->
+    </div>
+  </div>
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.3/jquery.min.js"></script>
   <script src="js/app.js"></script>
