--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title></title>
-  <link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.3.0/bootstrap.min.css">
+  <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/s.css">
 </head>
 <body>
@@ -18,7 +18,16 @@
     </div>
   </div>
 
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.3/jquery.min.js"></script>
+  <script type="text/x-template" id="frame-template">
+    
+  </script>
+
+  <script src="js/jquery.1.6.4.js"></script>
+  <script src="js/underscore-1.1.6.js"></script>
+  <script src="js/json2.js"></script>
+  <script src="js/backbone.js"></script>
+  <script src="js/backbone-localstorage.js"></script>
+  <script src="js/spin.js"></script>
   <script src="js/app.js"></script>
 </body>
 </html>
